crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__relationships__select_album_object_relationship_to_artist.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Artist": {
          "rows": [
            {
              "Name": "AC/DC"
            }
          ]
        },
        "Title": "Let There Be Rock"
      },
      {
        "Artist": {
          "rows": [
            {
              "Name": "Aerosmith"
            }
          ]
        },
        "Title": "Big Ones"
      },
      {
        "Artist": {
          "rows": [
            {
              "Name": "Alanis Morissette"
            }
          ]
        },
        "Title": "Jagged Little Pill"
      },
      {
        "Artist": {
          "rows": [
            {
              "Name": "Alice In Chains"
            }
          ]
        },
        "Title": "Facelift"
      },
      {
        "Artist": {
          "rows": [
            {
              "Name": "Antônio Carlos Jobim"
            }
          ]
        },
        "Title": "Warner 25 Anos"
      }
    ]
  }
]
